# wborm

./: 404.html  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml  publish-package.yml
assets/stylesheets/: extra.css
changelog/: index.html
docs/: changelog.en.md  changelog.md  exemplos.md  index.en.md  index.md  integra-wbjdbc.en.md  integra-wbjdbc.md  modelos.en.md  modelos.md  por-que-usar.en.md  por-que-usar.md
docs/en/: changelog.md  exemplos.md  index.md
en/: index.html
en/changelog/: index.html
en/exemplos/: index.html
en/integra-wbjdbc/: index.html
en/modelos/: index.html
en/por-que-usar/: index.html
exemplos/: index.html
integra-wbjdbc/: index.html
modelos/: index.html
por-que-usar/: index.html
wborm/: __init__.py  bootstrap.py  core.py  expressions.py  fields.py  introspect.py  model_cache.py  query.py  registry.py  utils.py
wborm/tests/: test_model.py
