[project]
name = "wborm"
version = "0.3.1"
description = "ORM leve com introspecção automática para bancos JDBC como Informix, usando integração com wbjdbc."
readme = "README.md"
authors = [
  { name = "Wanderson Batista", email = "wanderfreitasb@gmail.com" }
]
license = "MIT"
requires-python = ">=3.8"
dependencies = [
  "wbjdbc>=1.1.3",
  "tabulate",
  "termcolor",
  "pandas; extra == 'pandas'",
  "pyspark; extra == 'spark'"
]
keywords = ["ORM", "JDBC", "Informix", "DB2", "Firebird", "introspecção", "wbjdbc"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/wanderbatistaf/wborm"
Documentation = "https://wanderbatistaf.github.io/wborm"
Repository = "https://github.com/wanderbatistaf/wborm"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["wborm"]